--- a/app/src/main/res/layout/activity_full_screen_scanner_fragment.xml
+++ b/app/src/main/res/layout/activity_full_screen_scanner_fragment.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:layout_gravity="center|bottom"
-        android:text="Place a barcode in the viewfinder rectangle to scan it."
+        android:text="Place a content in the viewfinder rectangle to scan it."
         android:layout_width="wrap_content"
         android:textColor="#ffffff"
         android:layout_height="wrap_content"/>
